<?xml version="1.0"?>
<package format="2">
  <name>iiwa_tesla_description</name>
  <version>1.4.0</version>
  <description>This package contains the URDF of the KUKA LBR IIWA robot and attached tools</description>
  <author email="alexander_neubert@icloud.com">Alexander Neubert</author>
  <maintainer email="alexander_neubert@icloud.com">Alexander Neubert</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>force_torque_sensor_controller</depend>

</package>
